fix: resolve SonarCloud maintainability issues across 17 files
- Replace ResponseEntity<?> with ResponseEntity<Object> in AlertController, SessionController, ValidationController
- Extract ERROR_KEY constant in SessionController to eliminate duplicate 'error' literals
- Add KEY_TIMESTAMP and KEY_OVERALL_STATUS constants in StreamController
- Remove unused imports: SimulatorMode (SimulatorController), Component/Consumer (StreamController), BiConsumer (FeedConnection), BigDecimal (FieldCompletenessValidator), Instant/Logger/LoggerFactory (ThroughputValidator)
- Remove unused fields: alertStore (StreamController), log (LVWRSimulatorAdapter, ThroughputValidator)
- Replace Math.max/min chains with Math.clamp in SimulatorController and ScenarioConfig
- Fix control character \u0014 in FeedManager warn message
- Add EVENT_KEY constants in BackpressureQueue and FeedConnection
- Extract processTick() from BackpressureQueue.consumeLoop() to remove nested try block
- Extract fanOutToGlobalValidators/fanOutToPerFeedValidators/maybeNotifyListeners from ValidatorEngine.onTick() to reduce cognitive complexity from 16 to below threshold
- Extract applyStateUpdate/validateRules from StatefulValidator.applyAndValidate() to reduce cognitive complexity
- Merge nested if statements into parent in StatefulValidator
- Replace continue statements with guard condition in StreamController.onTick()
- Split multi-variable declarations in LatencyValidator
- Replace Collectors.toList() with .toList() in BinanceAdapter, ConnectionStore, ValidatorEngine
- Replace instanceof lambdas with method references for ThroughputValidator, OrderingValidator, ReconnectionValidator in ValidatorEngine
- Add comment to ScenarioConfig empty constructor